--- a/SchoolRegister/pom.xml
+++ b/SchoolRegister/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>SchoolRegister</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>SchoolRegister</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Register system school</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
