start adding security ao the aplication, user entity was created and its methods to recover its data

--- a/SchoolRegister/src/main/resources/application.properties
+++ b/SchoolRegister/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:mem:persondb
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.sql.init.platform=h2
 
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jps.show-sql=true
+logging.level.org.hibernate.SQL=debug
+logging.level.org.springframework.security.web.*=debug
+spring.thymeleaf.check-template-location=false
