adding thymeleaf layout

--- a/SchoolRegister/src/main/resources/application.properties
+++ b/SchoolRegister/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.sql.init.platform=h2
 
+spring.thymeleaf.cache=false
+
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jps.show-sql=true
 logging.level.org.hibernate.SQL=debug
