adding views of admin and adding entities Admin and Career

--- a/SchoolRegister/src/main/resources/application.properties
+++ b/SchoolRegister/src/main/resources/application.properties
@@ -13,3 +13,9 @@ spring.jps.show-sql=true
 logging.level.org.hibernate.SQL=debug
 logging.level.org.springframework.security.web.*=debug
 spring.thymeleaf.check-template-location=false
+
+spring.messages.basename=messages
+spring.messages.cache-duration=3600
+spring.locale=en
+spring.web.locale-resolver=accept-header
+@spring.messages.encoding=UTF-8
