--- a/SchoolRegister/src/main/resources/application.properties
+++ b/SchoolRegister/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.sql.init.platform=h2
+spring.jpa.show-sql=true
 
 spring.thymeleaf.cache=false
 
