--- a/SchoolRegister/src/main/resources/application.properties
+++ b/SchoolRegister/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.sql.init.platform=h2
 spring.jpa.show-sql=true
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
 
 spring.thymeleaf.cache=false
 
